--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="firstcontainer" class="container">
 
          <button id="click">click me</button>
-        <p>This a paragraph of the universe</p></div>
+        <p>Hello </p></div>
          <div class="container">
             <p>this is a paragraph</p>
             <script src="index.js"></script>
